--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   margin: 0;
   border: 0;
   padding: 0;
+  font-family: Helvetica;
 }
+
 
 .headerDiv{
   background-color: #4A90E2;
@@ -26,8 +28,59 @@
 .headerProfile span{
   color: white;
   margin-right: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .headerProfile .icon{
   color: white;
+  height: 24px;
+  width: 24px;
+}
+
+.post{
+  margin: 32px;
+  padding: 16px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 6px 2px rgba(112, 112, 112, 0.2);
+}
+
+.postData{
+  display: flex;
+  flex-direction: column;
+}
+
+.postContent{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.comment{
+  display:flex;
+  flex-direction: row;
+  margin-bottom: 16px;
+}
+
+.commentContent{
+  background-color: #EEEEEE;
+  border-radius: 20px;
+  padding: 16px;
+}
+
+.avatar{
+  border-radius: 50%;
+  height: 32px;
+  margin-right: 16px;
+}
+.author{
+  font-weight: bold;
+}
+
+.date{
+  color:#9A9A9A;
+  font-size:11px;
+}
+
+.content{
+  font-size: 14px;
 }
